@@ -33,7 +33,7 @@ CouchDB storage for ruote 2.1 (ruby workflow engine)
   gem.test_file = 'test/test.rb'
 
   gem.add_dependency 'ruote', ">= #{Ruote::Couch::VERSION}"
-  gem.add_dependency 'rufus-jig', '>= 0.1.16'
+  gem.add_dependency 'rufus-jig', '>= 0.1.17'
   gem.add_development_dependency 'yard'
   gem.add_development_dependency 'rake'
   gem.add_development_dependency 'jeweler'
